data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3779.wast
;; 8. **Test Description**: In a `br_table` with targets, provide an index exactly at the limit of valid range and one slightly beyond to check both boundary and off-by-one error handling.    - **Specific Constraint**: Boundary conditions and off-by-one errors in index handling.    - **Relation to `call`**: Similar boundary checking is crucial for `call` index validity.

(assert_invalid
  (module
    (func $f (param i32))
    (type $sig (func (param i32)))
    (table funcref (elem $f))
    (func $boundary-test
      (i32.const 99)
      (br_table 100 0 (i32.const 0))
      (call_indirect (type $sig) (i32.const 0) (i32.const 0))
    )
  )
  "type mismatch"
)